Added space complexity

--- a/Discussion.tex
+++ b/Discussion.tex
@@ -11,7 +11,8 @@ In order to narrow our study on conditional effects, we elected to disallow para
 This restriction requires that the effect of a conditional must in some way be transitively related to the objects used to determine whether it should occur. As explained in Section~\ref{chp:ca}, this is vital for describing preconditions as connected paths. However, certain domains are not constructible under this restriction. 
 
 
-\section{Missing: Time/Space complexity of non-condition action learning algorithm}
+\section{Space complexity of non-condition action learning algorithm}
+\subfile{Discussion/SpaceComplexity}
 
 \section{Missing: Advantage/disadvantage of negative goals solution}
 
