--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -39,7 +39,7 @@ For $\Pro$, $\Dsp$ and $\Up$ two important invariant holds.
 	\end{equation*}
 \end{invariant}
 
-\begin{invariant}[Completeness]
+\begin{invariant}[Completeness]\label{inv:nca:completeness}
 	The three sets completely describe $\lits$, i.e.\ 
 	\begin{equation*}
 	\Up \cup \Pro \cup \Dsp = \lits
