--- a/Discussion.tex
+++ b/Discussion.tex
@@ -2,10 +2,13 @@
 \begin{document}
 
 \section{Limitations on conditional action learning}
-As discussed in <ref>, we have imposed several restrictions on the conditional action schemas that we can learn, the most important of which we will discuss here.
+As discussed in Chapter~\ref{chp:ca}, we have imposed several restrictions on the conditional action schemas that we can learn, the most important of which we will discuss here.
 
 \paragraph*{No action parameters}
-In order to narrow our study on conditional effects, we elected to disallow parametric actions. We have previously proposed that conditional actions allow for a more natural representation of an agent's actions in an unknown environment, and this restriction forces the most extreme interpretation of this; an agent knows nothing about the meaning of the relations in the environment, or whether or not objects can be manipulated by its actions. Although non-parametric actions represents the completely ignorant agent, it is not always what we wish to model. For example, the Sokoban agent may be equipped with the knowledge that a tile is something that can be stood on and moved to, and can therefore accept one as an action parameter. This would remove the need for explicitly directional actions, and the eight conditional actions presented in Section~\ref{sec:sokocond} could be reduced to two. From both learning and planning perspectives, this is clearly desirable.
+In order to narrow our study on conditional effects, we elected to disallow parametric actions. We have previously proposed that conditional actions allow for a more natural representation of an agent's actions in an unknown environment, and this restriction forces the most extreme interpretation of this; an agent knows nothing about the meaning of the relations in the environment, or whether or not objects can be manipulated by its actions. Although non-parametric actions represents the completely ignorant agent, it is not always what we wish to model. For example, the Sokoban agent may be equipped with the knowledge that a tile is something that can be stood on and moved to, and can therefore accept one as an action parameter. This would remove the need for explicitly directional actions, and the eight conditional actions presented in Section~\ref{sec:sokocond} could be reduced to two ($\textit{move}(t)$ and $\textit{push}(t)$). From both learning and planning perspectives, this is clearly desirable.
+
+\paragraph*{Unique effects}
+To be able to map an effect atom to a conditional, we require that the effects of conditionals in an action schema are disjoint, as we currently can not learn disjunctive preconditions. However, this feature is important for readability, as it otherwise forces identical effects with different preconditions to be represented as different actions. For example, in the Sokoban domain, there are both \textit{move} and \textit{push} actions, although their preconditions overlap. This is because we are unable to specify that the agent is allowed to move to a tile if it is empty \textit{or} if there is a crate on it, but the tile behind the crate is empty. With support for effect overlap between conditionals, we would be able to represent the Sokoban domain with just four \textit{move} actions, and no \textit{push} actions. If action parameters was also supported, this could be reduced to a single action with one parameter.
 
 \paragraph{No disjoint preconditions}
 This restriction requires that the effect of a conditional must in some way be transitively related to the objects used to determine whether it should occur. As explained in Section~\ref{chp:ca}, this is vital for describing preconditions as connected paths. However, certain domains are not constructible under this restriction. 
