--- a/Preface.tex
+++ b/Preface.tex
@@ -15,7 +15,7 @@ This thesis will provide a proposal about a general agent learning algorithm, a 
     \vspace{5mm}
     \newline
   %Update signature image file in line below
-    \includegraphics[scale=0.5]{figures/SignatureDummy}
+    \includegraphics[scale=0.8]{Graphics/signatures}
 \end{center}
 \begin{flushright}
     \thesisauthor
