New image for conditional effects

--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -108,7 +108,7 @@ Given the restriction we presented we are able to simplify the problem. That is,
 
 \begin{figure}
 	\centering{%
-	\includegraphics[width=1\textwidth]{\master/Graphics/house_conditional_knowledge.png}}
+	\includegraphics[width=1\textwidth]{\master/Graphics/house_conditional_knowledge}}
 	\caption{\label{fig:ca:house-example}Three states of light problem for \Cref{ex:ca:light-on}}
 \end{figure}
 
